<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/menu_content_bg">
    <LinearLayout 
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_list"
            android:textSize="@dimen/menu_textsize"
            android:textColor="#ffffff"
            />
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/llyt_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/home"
        android:gravity="center_vertical"
        android:layout_marginTop="2dp"
        >
        <View 
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            />
         <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/index"
            android:textSize="@dimen/menu_textsize"
            android:textColor="#ffffff"
            />
    </LinearLayout>
     <LinearLayout 
        android:id="@+id/llyt_propertycollection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/menu_content_propertycollection"
         android:layout_marginTop="2dp"
        >
        <View 
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            />
         <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/propertycollection"
            android:textSize="@dimen/menu_textsize"
             android:textColor="#ffffff"
            />
    </LinearLayout>
      <LinearLayout 
        android:id="@+id/llyt_coordinatecollection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/menu_content_coordinatecollection"
         android:layout_marginTop="2dp"
        >
        <View 
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            />
         <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/lotcollection"
            android:textSize="@dimen/menu_textsize"
             android:textColor="#ffffff"
            />
    </LinearLayout>
      <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        >
         <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/menu_tool"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
             android:textColor="#ffffff"
            />
    </LinearLayout>
     <LinearLayout 
        android:id="@+id/llyt_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/menu_content_help"
         android:layout_marginTop="2dp"
        >
        <View 
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            />
         <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/menu_help"
            android:textSize="@dimen/menu_textsize"
             android:textColor="#ffffff"
            />
    </LinearLayout>
      <LinearLayout 
        android:id="@+id/llyt_opinion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/menu_content_opinion"
         android:layout_marginTop="2dp"
        >
        <View 
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            />
         <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/ment_option"
            android:textSize="@dimen/menu_textsize"
             android:textColor="#ffffff"
            />
    </LinearLayout>
  <ImageView 
          android:id="@+id/iv_titleicon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/menu_content_icon"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="50dp"
          />
</LinearLayout>