<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout style="@style/propertytable_llyt_stytle" >

            <TextView
              
                style="@style/propertytable_labelname_stytle"
                android:text="@string/propertytale_jingzhuang" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/vertical_line_short" />

        <LinearLayout style="@style/propertytable_llyt_stytle" >

            <TextView
              
                style="@style/propertytable_labelname_stytle"
                android:text="@string/propertytale_zaishou" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/vertical_line_short" />

        <LinearLayout style="@style/propertytable_llyt_stytle" >

            <TextView
             
                style="@style/propertytable_labelname_stytle"
                android:text="@string/propertytale_gaocheng" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/vertical_line_short" />

        <LinearLayout style="@style/propertytable_llyt_stytle" >

            <TextView
              
                style="@style/propertytable_labelname_stytle"
                android:text="@string/propertytale_bigchanquanfang" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/vertical_line_short" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
              
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/horizontal_line" />

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="#ffffff" />

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="#ffffff" />

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="#ffffff" />

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/horizontal_handstand_line" />
    </LinearLayout>

</LinearLayout>